
        BOOKKEEPER-434: [Hedwig CPP Client] Delay resolving default host until necessary. (sijie via ivank)

        BOOKKEEPER-452: Rename ClientConfiguration multiplexing_enabled to subscription_connection_sharing_enabled (sijie via ivank)

        BOOKKEEPER-454: hedwig c++ tester script assumes sh is bash (ivank)

      hedwig-server:

        BOOKKEEPER-302: No more messages delivered when hub server scans messages over two ledgers. (sijie via ivank)

        BOOKKEEPER-330: System.currentTimeMillis usage in Hedwig (uma via sijie)

        BOOKKEEPER-343: Failed to register hedwig JMX beans in test cases (sijie via ivank)

        BOOKKEEPER-259: Create a topic manager using versioned write for leader election (sijie via ivank)

        BOOKKEEPER-191: Hub server should change ledger to write, so consumed messages have chance to be garbage collected. (sijie via ivank)

        BOOKKEEPER-439: No more messages delivered after deleted consumed ledgers. (sijie via ivank)

        BOOKKEEPER-440: Make Write/Delete SubscriptionData Restricted to Version (Fangmin Lv via ivank)

        BOOKKEEPER-482: Precommit is reporting findbugs errors in trunk (ivank via sijie)

        BOOKKEEPER-442: Failed to deliver messages due to inconsistency between SubscriptionState and LedgerRanges. (jiannan via ivank)

    IMPROVEMENTS:

      BOOKKEEPER-467: Allocate ports for testing dynamically (ivank)

      BOOKKEEPER-471: Add scripts for preCommit testing (ivank)

      BOOKKEEPER-476: Log to file during tests (ivank via fpj)

      bookkeeper-server:

        BOOKKEEPER-328: Bookie DeathWatcher is missing thread name (Rakesh via sijie)

        BOOKKEEPER-2: bookkeeper does not put enough meta-data in to do recovery properly (ivank via sijie)

        BOOKKEEPER-317: Exceptions for replication (ivank via sijie)

        BOOKKEEPER-246: Recording of underreplication of ledger entries (ivank)

        BOOKKEEPER-247: Detection of under replication (ivank)
