@@ -82,7 +82,11 @@ class ResubscribeCallback implements Callback<ResponseBody> {
         // a topic subscription has failed. So instead, we'll just keep
         // retrying in the background until success.
         logger.error("Resubscribe failed with error: " + exception.getMessage());
-        retrySubscribeRequest();
+        // we don't retry subscribe request is channel manager is closing
+        // otherwise it might overflow the stack.
+        if (!channelManager.isClosed()) {
+            retrySubscribeRequest();
+        }
     }
 
     private void retrySubscribeRequest() {
